--- a/task4.html
+++ b/task4.html
@@ -12,11 +12,11 @@
     </head>
     <!-- image-1 -->
     <div >
-        <img class="img-1" src="img/fly-bird.jpg" alt="">
+        <img class="img-radient" src="img/fly-bird.jpg" alt="">
     </div>
     <!-- img-2 -->
     <div >
-        <img class="img-2"  src="img/najrul-islam.jpg" alt="">
+        <img class="img-border"  src="img/najrul-islam.jpg" alt="">
     </div>
    
 </body>
